if LANG_ES
  ES_DIR = es
endif

if LANG_ES_UTF8
  ES_DIR_UTF8 = es.utf8
endif

if LANG_PT
  PT_DIR = pt
endif

if LANG_PT_UTF8
  PT_DIR_UTF8 = pt.utf8
endif

if LANG_PT_BR
  PT_BR_DIR = pt_BR
endif

if LANG_PT_BR_UTF8
  PT_BR_DIR_UTF8 = pt_BR.utf8
endif

if LANG_DE
  DE_DIR = de
endif

if LANG_DE_UTF8
  DE_DIR_UTF8 = de.utf8
endif

SUBDIRS = $(ES_DIR) $(ES_DIR_UTF8) $(PT_DIR) $(PT_DIR_UTF8) $(PT_BR_DIR) $(PT_BR_DIR_UTF8) $(DE_DIR) $(DE_DIR_UTF8)

info_TEXINFOS = #maxima.texi
maxima_TEXINFOS = include-maxima.texi category-macros.texi Introduction.texi \
 Bugs.texi Help.texi Command.texi DataTypes.texi Constants.texi Lists.texi \
 Arrays.texi defstruct.texi Expressions.texi Operators.texi Evaluation.texi \
 Simplification.texi MathFunctions.texi Database.texi Plotting.texi \
 Input.texi Polynomials.texi Special.texi Elliptic.texi Limits.texi \
 Differentiation.texi Integration.texi Equations.texi Differential.texi \
 Numerical.texi Matrices.texi Affine.texi Itensor.texi Ctensor.texi \
 Atensor.texi Series.texi Number.texi Symmetries.texi Groups.texi \
 Runtime.texi Miscellaneous.texi Rules.texi nset.texi Function.texi \
 Program.texi Debugging.texi alt-display.texi asympa.texi \
 augmented_lagrangian.texi bitwise.texi bernstein.texi bode.texi celine.texi \
 clebsch_gordan.texi combinatorics.texi odepack.texi \
 cobyla.texi contrib_ode.texi descriptive.texi diag.texi distrib.texi \
 draw.texi drawdf.texi dynamics.texi engineering-format.texi \
 wrstcse.texi ezunits.texi f90.texi finance.texi \
 fractals.texi ggf.texi graphs.texi grobner.texi hompack.texi impdiff.texi interpol.texi \
 lapack.texi lbfgs.texi lindstedt.texi linearalgebra.texi lsquares.texi \
 minpack.texi makeOrders.texi mnewton.texi numericalio.texi opsubst.texi \
 operatingsystem.texi \
 orthopoly.texi pytranslate.texi ratpow.texi romberg.texi simplex.texi simplifications.texi solve_rec.texi \
 stats.texi stirling.texi stringproc.texi to_poly_solve.texi unit.texi \
 zeilberger.texi errormessages.texi commandline-options.texi

figurefiles = \
figures/introduction1.png\
figures/introduction2.png\
figures/introduction3.png\
figures/dynamics1.png\
figures/dynamics2.png\
figures/dynamics3.png\
figures/dynamics4.png\
figures/dynamics5.png\
figures/dynamics6.png\
figures/dynamics7.png\
figures/dynamics8.png\
figures/plotdf1.png\
figures/plotdf2.png\
figures/plotdf3.png\
figures/plotdf4.png\
figures/plotdf5.png\
figures/plotdf6.png\
figures/plotting2.png\
figures/plotting3.png\
figures/plotting4.png\
figures/plotting5.png\
figures/plotting6.png\
figures/plotting7.png\
figures/plotting8.png\
figures/plotting9.png\
figures/plotting10.png\
figures/plotting11.png\
figures/plotting12.png\
figures/plotting13.png\
figures/plotting14.png\
figures/plotting15.png\
figures/plotting16.png\
figures/plotting17.png\
figures/plotting18.png\
figures/plotting19.png\
figures/plotting20.png\
figures/plotting21.png\
figures/plotting22.png\
figures/plotting23.png\
figures/plotting24.png\
figures/plotting25.png\
figures/plotting26.png\
figures/orthopoly1.png\
figures/graphs01.png\
figures/graphs02.png\
figures/graphs03.png\
figures/graphs04.png\
figures/graphs05.png\
figures/graphs06.png\
figures/graphs07.png\
figures/graphs08.png\
figures/graphs09.png\
figures/graphs10.png\
figures/graphs11.png\
figures/graphs12.png\
figures/graphs13.png\
figures/graphs14.png\
figures/graphs15.png\
figures/favicon.ico\
figures/bodegain1.png\
figures/bodegain2.png\
figures/bodegain3.png\
figures/bodegain4.png\
figures/bodegain5.png\
figures/bodegain6.png\
figures/bodegain7.png\
figures/bodegain8.png\
figures/bodephase1.png\
figures/bodephase2.png\
figures/bodephase3.png\
figures/bodephase4.png\
figures/bodephase5.png\
figures/bodephase6.png\
figures/bodephase7.png\
figures/bodephase8.png\
figures/bodephase9.png\
figures/scene1.png\
figures/scene2.png\
figures/color_terminal.png\
figures/draw_allocation.png\
figures/draw_allocation2.png\
figures/draw_axis3d.png\
figures/draw_axis_bottom.png\
figures/draw_bars.png\
figures/draw_border.png\
figures/draw_cbrange.png\
figures/draw_cbtics.png\
figures/draw_colorbox2.png\
figures/draw_colorbox.png\
figures/draw_color.png\
figures/draw_color2.png\
figures/draw_color3.png\
figures/draw_color4.png\
figures/draw_columns.png\
figures/draw_contour2.png\
figures/draw_contour.png\
figures/draw_cylindrical.png\
figures/draw_elevation_grid.png\
figures/draw_ellipse.png\
figures/draw_enhanced3d10.png\
figures/draw_enhanced3d11.png\
figures/draw_enhanced3d2.png\
figures/draw_enhanced3d3.png\
figures/draw_enhanced3d4.png\
figures/draw_enhanced3d5.png\
figures/draw_enhanced3d6.png\
figures/draw_enhanced3d7.png\
figures/draw_enhanced3d8.png\
figures/draw_enhanced3d9.png\
figures/draw_enhanced3d.png\
figures/draw_equiv.png\
figures/draw_errors2.png\
figures/draw_errors.png\
figures/draw_explicit2.png\
figures/draw_explicit3.png\
figures/draw_explicit.png\
figures/draw_filledfunc2.png\
figures/draw_filledfunc.png\
figures/draw_grid2.png\
figures/draw_grid.png\
figures/draw_head_angle.png\
figures/draw_head_both.png\
figures/draw_head_length.png\
figures/draw_head_type.png\
figures/draw_image2.png\
figures/draw_image3.png\
figures/draw_image4.png\
figures/draw_image5.png\
figures/draw_image6.png\
figures/draw_image.png\
figures/draw_implicit2.png\
figures/draw_implicit.png\
figures/draw_interpolate_color2.png\
figures/draw_interpolate_color3.png\
figures/draw_interpolate_color4.png\
figures/draw_interpolate_color5.png\
figures/draw_interpolate_color6.png\
figures/draw_interpolate_color.png\
figures/draw_intro.png\
figures/draw_intro3.png\
figures/draw_intro2.png\
figures/draw_key.png\
figures/draw_key_label_alignment.png\
figures/draw_key_label_orientation.png\
figures/draw_key_pos2.png\
figures/draw_key_pos.png\
figures/draw_label2.png\
figures/draw_label_alignment.png\
figures/draw_label.png\
figures/draw_label_orientation.png\
figures/draw_line_type.png\
figures/draw_line_width.png\
figures/draw_logcb.png\
figures/draw_logx_secondary.png\
figures/draw_mesh2.png\
figures/draw_mesh3.png\
figures/draw_mesh.png\
figures/draw_multiplot.png\
figures/draw_nticks.png\
figures/draw_palette2.png\
figures/draw_palette3.png\
figures/draw_palette4.png\
figures/draw_palette5.png\
figures/draw_palette.png\
figures/draw_parametric3.png\
figures/draw_parametric2.png\
figures/draw_parametric.png\
figures/draw_points2.png\
figures/draw_points3.png\
figures/draw_points4.png\
figures/draw_points5.png\
figures/draw_points6.png\
figures/draw_points7.png\
figures/draw_points8.png\
figures/draw_point_size.png\
figures/draw_points_joined.png\
figures/draw_points.png\
figures/draw_point_type.png\
figures/draw_polygon.png\
figures/draw_polar.png\
figures/draw_proportional_axis2.png\
figures/draw_proportional_axis.png\
figures/draw_quadrilateral.png\
figures/draw_rectangle.png\
figures/draw_region.png\
figures/draw_scene.png\
figures/draw_spherical.png\
figures/draw_surface_hide.png\
figures/draw_title.png\
figures/draw_transform2.png\
figures/draw_transparent.png\
figures/draw_triangle.png\
figures/draw_tube_extremes.png\
figures/draw_tube.png\
figures/draw_unit_vectors.png\
figures/draw_user_preamble.png\
figures/draw_user_preamble2.png\
figures/draw_vector2.png\
figures/draw_vector.png\
figures/draw_view2.png\
figures/draw_view.png\
figures/draw_wired_surface.png\
figures/draw_xaxis.png\
figures/draw_xaxis_secondary.png\
figures/draw_xugrid.png\
figures/draw_ylabel_secondary.png\
figures/draw_transform.png\
figures/worldmap_make_poly_continent.png\
figures/worldmap_make_poly_continent2.png\
figures/worldmap_make_poly_country.png\
figures/worldmap_make_polygon.png\
figures/worldmap_region_boundaries.png\
figures/worldmap_region_boundaries_plus.png\
figures/worldmap_geomap.png\
figures/worldmap_geomap2.png\
figures/worldmap_geomap3.png\
figures/worldmap_geomap4.png\
figures/worldmap_geomap5.png\
figures/worldmap_geomap6.png

pdffigures = \
figures/introduction1.pdf\
figures/introduction2.pdf\
figures/introduction3.pdf\
figures/dynamics1.pdf\
figures/dynamics2.pdf\
figures/dynamics3.pdf\
figures/dynamics4.pdf\
figures/dynamics5.pdf\
figures/dynamics6.pdf\
figures/dynamics7.pdf\
figures/dynamics8.pdf\
figures/plotdf1.pdf\
figures/plotdf2.pdf\
figures/plotdf3.pdf\
figures/plotdf4.pdf\
figures/plotdf5.pdf\
figures/plotdf6.pdf\
figures/plotting2.pdf\
figures/plotting3.pdf\
figures/plotting4.pdf\
figures/plotting5.pdf\
figures/plotting6.pdf\
figures/plotting7.pdf\
figures/plotting8.pdf\
figures/plotting9.pdf\
figures/plotting10.pdf\
figures/plotting11.pdf\
figures/plotting12.pdf\
figures/plotting13.pdf\
figures/plotting14.pdf\
figures/plotting15.pdf\
figures/plotting16.pdf\
figures/plotting17.pdf\
figures/plotting18.pdf\
figures/plotting19.pdf\
figures/plotting20.pdf\
figures/plotting21.pdf\
figures/plotting22.pdf\
figures/plotting23.pdf\
figures/plotting24.pdf\
figures/plotting25.pdf\
figures/plotting26.pdf\
figures/orthopoly1.pdf\
figures/graphs01.pdf\
figures/graphs02.pdf\
figures/graphs03.pdf\
figures/graphs04.pdf\
figures/graphs05.pdf\
figures/graphs06.pdf\
figures/graphs07.pdf\
figures/graphs08.pdf\
figures/graphs09.pdf\
figures/graphs10.pdf\
figures/graphs11.pdf\
figures/graphs12.pdf\
figures/graphs13.pdf\
figures/graphs14.pdf\
figures/graphs15.pdf\
figures/bodegain1.pdf\
figures/bodegain2.pdf\
figures/bodegain3.pdf\
figures/bodegain4.pdf\
figures/bodegain5.pdf\
figures/bodegain6.pdf\
figures/bodegain7.pdf\
figures/bodegain8.pdf\
figures/bodephase1.pdf\
figures/bodephase2.pdf\
figures/bodephase3.pdf\
figures/bodephase4.pdf\
figures/bodephase5.pdf\
figures/bodephase6.pdf\
figures/bodephase7.pdf\
figures/bodephase8.pdf\
figures/bodephase9.pdf\
figures/scene1.pdf\
figures/scene2.pdf\
figures/color_terminal.pdf\
figures/draw_allocation.pdf\
figures/draw_allocation2.pdf\
figures/draw_axis3d.pdf\
figures/draw_axis_bottom.pdf\
figures/draw_bars.pdf\
figures/draw_border.pdf\
figures/draw_cbrange.pdf\
figures/draw_cbtics.pdf\
figures/draw_colorbox2.pdf\
figures/draw_colorbox.pdf\
figures/draw_color.pdf\
figures/draw_color2.pdf\
figures/draw_color3.pdf\
figures/draw_color4.pdf\
figures/draw_columns.pdf\
figures/draw_contour2.pdf\
figures/draw_contour.pdf\
figures/draw_cylindrical.pdf\
figures/draw_elevation_grid.pdf\
figures/draw_ellipse.pdf\
figures/draw_enhanced3d10.pdf\
figures/draw_enhanced3d11.pdf\
figures/draw_enhanced3d2.pdf\
figures/draw_enhanced3d3.pdf\
figures/draw_enhanced3d4.pdf\
figures/draw_enhanced3d5.pdf\
figures/draw_enhanced3d6.pdf\
figures/draw_enhanced3d7.pdf\
figures/draw_enhanced3d8.pdf\
figures/draw_enhanced3d9.pdf\
figures/draw_enhanced3d.pdf\
figures/draw_equiv.pdf\
figures/draw_errors2.pdf\
figures/draw_errors.pdf\
figures/draw_explicit2.pdf\
figures/draw_explicit3.pdf\
figures/draw_explicit.pdf\
figures/draw_filledfunc2.pdf\
figures/draw_filledfunc.pdf\
figures/draw_grid2.pdf\
figures/draw_grid.pdf\
figures/draw_head_angle.pdf\
figures/draw_head_both.pdf\
figures/draw_head_length.pdf\
figures/draw_head_type.pdf\
figures/draw_image2.pdf\
figures/draw_image3.pdf\
figures/draw_image4.pdf\
figures/draw_image5.pdf\
figures/draw_image6.pdf\
figures/draw_image.pdf\
figures/draw_implicit2.pdf\
figures/draw_implicit.pdf\
figures/draw_interpolate_color2.pdf\
figures/draw_interpolate_color3.pdf\
figures/draw_interpolate_color4.pdf\
figures/draw_interpolate_color5.pdf\
figures/draw_interpolate_color6.pdf\
figures/draw_interpolate_color.pdf\
figures/draw_intro.pdf\
figures/draw_intro3.pdf\
figures/draw_intro2.pdf\
figures/draw_key.pdf\
figures/draw_key_label_alignment.pdf\
figures/draw_key_label_orientation.pdf\
figures/draw_key_pos2.pdf\
figures/draw_key_pos.pdf\
figures/draw_label2.pdf\
figures/draw_label_alignment.pdf\
figures/draw_label.pdf\
figures/draw_label_orientation.pdf\
figures/draw_line_type.pdf\
figures/draw_line_width.pdf\
figures/draw_logcb.pdf\
figures/draw_logx_secondary.pdf\
figures/draw_mesh2.pdf\
figures/draw_mesh3.pdf\
figures/draw_mesh.pdf\
figures/draw_multiplot.pdf\
figures/draw_nticks.pdf\
figures/draw_palette2.pdf\
figures/draw_palette3.pdf\
figures/draw_palette4.pdf\
figures/draw_palette5.pdf\
figures/draw_palette.pdf\
figures/draw_parametric3.pdf\
figures/draw_parametric2.pdf\
figures/draw_parametric.pdf\
figures/draw_points2.pdf\
figures/draw_points3.pdf\
figures/draw_points4.pdf\
figures/draw_points5.pdf\
figures/draw_points6.pdf\
figures/draw_points7.pdf\
figures/draw_points8.pdf\
figures/draw_point_size.pdf\
figures/draw_points_joined.pdf\
figures/draw_points.pdf\
figures/draw_point_type.pdf\
figures/draw_polygon.pdf\
figures/draw_polar.pdf\
figures/draw_proportional_axis2.pdf\
figures/draw_proportional_axis.pdf\
figures/draw_quadrilateral.pdf\
figures/draw_rectangle.pdf\
figures/draw_region.pdf\
figures/draw_scene.pdf\
figures/draw_spherical.pdf\
figures/draw_surface_hide.pdf\
figures/draw_title.pdf\
figures/draw_transform2.pdf\
figures/draw_transparent.pdf\
figures/draw_triangle.pdf\
figures/draw_tube_extremes.pdf\
figures/draw_tube.pdf\
figures/draw_unit_vectors.pdf\
figures/draw_user_preamble.pdf\
figures/draw_user_preamble2.pdf\
figures/draw_vector2.pdf\
figures/draw_vector.pdf\
figures/draw_view2.pdf\
figures/draw_view.pdf\
figures/draw_wired_surface.pdf\
figures/draw_xaxis.pdf\
figures/draw_xaxis_secondary.pdf\
figures/draw_xugrid.pdf\
figures/draw_ylabel_secondary.pdf\
figures/draw_transform.pdf\
figures/worldmap_make_poly_continent.pdf\
figures/worldmap_make_poly_continent.pdf\
figures/worldmap_make_poly_continent.pdf\
figures/worldmap_make_poly_continent2.pdf\
figures/worldmap_make_poly_country.pdf\
figures/worldmap_make_polygon.pdf\
figures/worldmap_region_boundaries.pdf\
figures/worldmap_region_boundaries_plus.pdf\
figures/worldmap_geomap.pdf\
figures/worldmap_geomap2.pdf\
figures/worldmap_geomap3.pdf\
figures/worldmap_geomap4.pdf\
figures/worldmap_geomap5.pdf\
figures/worldmap_geomap6.pdf

macfiles = \
figures/draw_allocation2.mac\
figures/draw_allocation.mac\
figures/draw_axis3d.mac\
figures/draw_axis_bottom.mac\
figures/draw_bars.mac\
figures/draw_border.mac\
figures/draw_cbrange.mac\
figures/draw_cbtics.mac\
figures/draw_color2.mac\
figures/draw_color3.mac\
figures/draw_color4.mac\
figures/draw_colorbox2.mac\
figures/draw_colorbox.mac\
figures/draw_color.mac\
figures/draw_columns.mac\
figures/draw_contour2.mac\
figures/draw_contour.mac\
figures/draw_cylindrical.mac\
figures/draw_elevation_grid.mac\
figures/draw_ellipse.mac\
figures/draw_enhanced3d10.mac\
figures/draw_enhanced3d11.mac\
figures/draw_enhanced3d2.mac\
figures/draw_enhanced3d3.mac\
figures/draw_enhanced3d4.mac\
figures/draw_enhanced3d5.mac\
figures/draw_enhanced3d6.mac\
figures/draw_enhanced3d7.mac\
figures/draw_enhanced3d8.mac\
figures/draw_enhanced3d9.mac\
figures/draw_enhanced3d.mac\
figures/draw_equiv.mac\
figures/draw_errors2.mac\
figures/draw_errors.mac\
figures/draw_explicit2.mac\
figures/draw_explicit3.mac\
figures/draw_explicit.mac\
figures/draw_filledfunc2.mac\
figures/draw_filledfunc.mac\
figures/draw_grid2.mac\
figures/draw_grid.mac\
figures/draw_head_angle.mac\
figures/draw_head_both.mac\
figures/draw_head_length.mac\
figures/draw_head_type.mac\
figures/draw_image2.mac\
figures/draw_image3.mac\
figures/draw_image4.mac\
figures/draw_image5.mac\
figures/draw_image6.mac\
figures/draw_image.mac\
figures/draw_implicit2.mac\
figures/draw_implicit.mac\
figures/draw_interpolate_color2.mac\
figures/draw_interpolate_color3.mac\
figures/draw_interpolate_color4.mac\
figures/draw_interpolate_color5.mac\
figures/draw_interpolate_color6.mac\
figures/draw_interpolate_color.mac\
figures/draw_intro2.mac\
figures/draw_intro3.mac\
figures/draw_intro.mac\
figures/draw_key.mac\
figures/draw_key_pos2.mac\
figures/draw_key_pos.mac\
figures/draw_label2.mac\
figures/draw_label_alignment.mac\
figures/draw_label.mac\
figures/draw_label_orientation.mac\
figures/draw_line_type.mac\
figures/draw_line_width.mac\
figures/draw_logcb.mac\
figures/draw_logx_secondary.mac\
figures/draw_mesh2.mac\
figures/draw_mesh3.mac\
figures/draw_mesh.mac\
figures/draw_nticks.mac\
figures/draw_palette2.mac\
figures/draw_palette3.mac\
figures/draw_palette4.mac\
figures/draw_palette5.mac\
figures/draw_palette.mac\
figures/draw_parametric2.mac\
figures/draw_parametric3.mac\
figures/draw_parametric.mac\
figures/draw_points2.mac\
figures/draw_points3.mac\
figures/draw_points4.mac\
figures/draw_points5.mac\
figures/draw_points6.mac\
figures/draw_points7.mac\
figures/draw_points8.mac\
figures/draw_point_size.mac\
figures/draw_points_joined.mac\
figures/draw_points.mac\
figures/draw_point_type.mac\
figures/draw_polar.mac\
figures/draw_polygon.mac\
figures/draw_proportional_axis2.mac\
figures/draw_proportional_axis.mac\
figures/draw_quadrilateral.mac\
figures/draw_rectangle.mac\
figures/draw_region.mac\
figures/draw_scene.mac\
figures/draw_spherical.mac\
figures/draw_surface_hide.mac\
figures/draw_title.mac\
figures/draw_transform2.mac\
figures/draw_transform.mac\
figures/draw_transparent.mac\
figures/draw_triangle.mac\
figures/draw_tube_extremes.mac\
figures/draw_tube.mac\
figures/draw_unit_vectors.mac\
figures/draw_user_preamble2.mac\
figures/draw_user_preamble.mac\
figures/draw_vector2.mac\
figures/draw_vector.mac\
figures/draw_view2.mac\
figures/draw_view.mac\
figures/draw_wired_surface.mac\
figures/draw_xaxis.mac\
figures/draw_xaxis_secondary.mac\
figures/draw_xugrid.mac\
figures/draw_ylabel_secondary.mac\
figures/plotting10.mac\
figures/plotting11.mac\
figures/plotting12.mac\
figures/plotting13.mac\
figures/plotting14.mac\
figures/plotting15.mac\
figures/plotting16.mac\
figures/plotting17.mac\
figures/plotting18.mac\
figures/plotting19.mac\
figures/plotting20.mac\
figures/plotting21.mac\
figures/plotting22.mac\
figures/plotting23.mac\
figures/plotting24.mac\
figures/plotting25.mac\
figures/plotting26.mac\
figures/plotting2.mac\
figures/plotting3.mac\
figures/plotting4.mac\
figures/plotting5.mac\
figures/plotting6.mac\
figures/plotting7.mac\
figures/plotting8.mac\
figures/plotting9.mac\
figures/worldmap_geomap2.mac\
figures/worldmap_geomap3.mac\
figures/worldmap_geomap4.mac\
figures/worldmap_geomap5.mac\
figures/worldmap_geomap6.mac\
figures/worldmap_geomap.mac\
figures/worldmap_make_poly_continent2.mac\
figures/worldmap_make_poly_continent.mac\
figures/worldmap_make_poly_country.mac\
figures/worldmap_make_polygon.mac\
figures/worldmap_region_boundaries.mac\
figures/worldmap_region_boundaries_plus.mac

if CHM
MAXIMA_CHM = maxima.chm
INSTALL_CHM = install-chm
UNINSTALL_CHM = uninstall-chm
CLEAN_CHM = clean-chm
endif

INFOLANG ?= en

# We need the html docu to be generated on "make all" because if we fail
# to do so a "sudo make install" will generate the html docu as read-only
# fails conflicting with a subsequent "make html".
all-local: html maxima.info maxima-index.lisp $(MAXIMA_CHM)

infoname = maxima
include $(top_srcdir)/common-info.mk
maxima.info : maxima.texi $(maxima_TEXINFOS)
	-$(MAKEINFO) $(AM_MAKEINFOFLAGS) $(MAKEINFOFLAGS) \
	  --split-size=1000000 $(srcdir)/maxima.texi

html: maxima_toc.html contents.hhc

maxima-index.lisp: build_index.pl maxima.info
	/usr/bin/env perl $^ ':crlf' > $@

DOLLAR_SIGN = $$

maxima_toc.html: maxima.texi $(maxima_TEXINFOS) $(figurefiles) manual.css texi2html.init
	./build_html.sh

maxima.epub: maxima_toc.html
	ebook-convert maxima_singlepage.html maxima.epub --breadth-first "--title=Maxima @manual_version@ Manual" "--authors=Maxima Team" --language=en

maxima.pdf: maxima.texi $(maxima_TEXINFOS) $(pdffigures)
	$(TEXI2PDF) $(AM_V_texinfo) -o maxima.pdf $<
	rm -f maxima.fns maxima.vr maxima.tp maxima.pg maxima.ky maxima.cp \
	maxima.toc maxima.fn maxima.aux maxima.log

contents.hhc index.hhk: maxima_toc.html
	/usr/bin/env perl $(srcdir)/create_index maxima_toc.html

# Squash error on exit from hhc
maxima.chm: maxima.hhp contents.hhc index.hhk
	-"$(HHC)" maxima.hhp

include $(top_srcdir)/common.mk
genericdir = $(dochtmldir)
genericdirDATA = $(figurefiles) \
contents.hhc index.hhk header.hhp maxima.hhp

htmlname = maxima
htmlinstdir = $(dochtmldir)
include $(top_srcdir)/common-html.mk

all-local: warn_texinfo
dist-hook: check_texinfo html
pdf-local: maxima.pdf

install-data-local: install-maxima-index $(INSTALL_CHM)
uninstall-local: uninstall-maxima-index $(UNINSTALL_CHM)

install-maxima-index: maxima-index.lisp
	$(MKDIR_P) "$(DESTDIR)$(infodir)"
	$(INSTALL_DATA) maxima-index.lisp "$(DESTDIR)$(infodir)/maxima-index.lisp"

uninstall-maxima-index: maxima-index.lisp
	rm -f "$(DESTDIR)$(infodir)/maxima-index.lisp"

clean-local: clean-info clean-html $(CLEAN_CHM)

clean-info:
	rm -f $(wildcard maxima.info* maxima-index.lisp) \
	      $(wildcard $(addprefix $(srcdir),maxima.info* maxima-index.lisp))
	rm -f maxima.fns

clean-html:
	rm -f $(wildcard maxima*.html contents.hhc index.hhk maxima.chm) \
	      $(wildcard $(addprefix $(srcdir),maxima*.html contents.hhc index.hhk maxima.chm))

if CHM
install-chm: maxima.chm
	$(MKDIR_P) "$(DESTDIR)$(docchmdir)"
	$(INSTALL_DATA) maxima.chm "$(DESTDIR)$(docchmdir)/maxima.chm"

uninstall-chm:
	rm -f "$(DESTDIR)$(docchmdir)"

clean-chm:
	rm -f maxima.chm
	rm -rf chm
endif

EXTRA_DIST = texi2html manual.css texi2html.init maxima.texi maxima.html \
    $(genericdirDATA) $(pdffigures) $(macfiles) $(maxima_TEXINFOS) $(figurefiles) \
    create_index build_index.pl maxima-index.lisp docdraw.mac \
    extract_categories1.awk extract_categories1.sed check_tab fix_tab \
    figures/Makefile.am figures/Makefile.in figures/README \
    maxima-init.lisp README.update_examples \
    figures/orthopoly1.ps.gz figures/plotdf1.ps.gz figures/plotdf2.ps.gz figures/plotdf3.ps.gz figures/plotdf4.ps.gz figures/plotdf5.ps.gz figures/plotdf6.ps.gz

check_texinfo:
	@pattern=`printf "\t"` ; \
	bad_files=`find . -name '*.texi' -print0 | xargs -0 $(EGREP) -l -e "$$pattern"` ; \
	[ -z  "$$bad_files" ] || ( echo "ERROR: The following files have unexpanded Tabs: $$bad_files" ; \
	echo "Run make distclean and then doc/info/fix_tab to fix the problem." ; exit 1 )

warn_texinfo:
	@pattern=`printf "\t"` ; \
	bad_files=`find . -name '*.texi' -print0 | xargs -0 $(EGREP) -l -e "$$pattern"` ; \
	[ -z  "$$bad_files" ] || ( echo "WARNING: The following files have unexpanded Tabs: $$bad_files" ; \
	echo "Run doc/info/fix_tab to fix the problem." )

distclean-local:
	rm -f figures/Makefile


.PHONY: check_texinfo warn_texinfo
